--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   "main": "src/index.js",
   "dependencies": {
     "isomorphic-unfetch": "^3.0.0",
+    "mapbox-gl": "^1.8.0",
+    "minireset.css": "^0.0.6",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-mapbox-gl": "^4.8.2",
     "react-scripts": "3.0.1",
-    "swr": "^0.1.17"
+    "swr": "^0.1.17",
+    "unfetch": "^4.1.0"
   },
   "devDependencies": {
     "typescript": "3.3.3"
